--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,16 @@
 @import "tailwindcss";
 
+
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+:root{
+--bg-bank-gradient: linear-gradient(90deg, #0179FE 0%, #4893FF 100% );
+--text-bank-gradient: linear-gradient(90deg, #0179FE 0%, #4893FF 100% )
 }
 
 
@@ -348,7 +355,7 @@
 .profile-banner {
   height: 120px;
   width: 100%;
-  background: var(--bg-gradient-mesh);
+  background-image:url('/icons/gradient-mesh.svg') ;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -508,7 +515,7 @@
   font-size: 24px;
   line-height: 30px;
   font-weight: 600;
-  color: #111827;
+  color: #67728b;
 }
 @media (min-width: 1024px) {
   .header-box-title {
@@ -966,7 +973,7 @@
   top: 0;
   display: flex;
   height: 100vh;
-  width: auto;
+  width: 300px;
   flex-direction: column;
   justify-content: space-between;
   border-right: 1px solid #E5E7EB;
