--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,8 @@
 }
 :root{
 --bg-bank-gradient: linear-gradient(90deg, #0179FE 0%, #4893FF 100% );
---text-bank-gradient: linear-gradient(90deg, #0179FE 0%, #4893FF 100% )
+--text-bank-gradient:  #0179FE;
+--color-bankGradient:  #0179FE ;
 }
 
 
@@ -94,6 +95,7 @@
   border-width: 1px;
   border-color: #D1D5DB; /* gray-300 */
   color: #111827; /* text-gray-900 */
+  padding: 0.625rem 1rem;
 }
 .input-class::placeholder {
   font-size: 16px;
@@ -734,7 +736,8 @@
 .form-item {
   display: flex;
   flex-direction: column;
-  gap: 0.375rem;
+  gap: 0.38rem;
+ 
 }
 
 /* .form-label */
@@ -745,6 +748,7 @@
   max-width: 280px;
   font-weight: 500;
   color: #374151;
+  padding: 5px;
 }
 
 /* .form-message */
@@ -752,10 +756,13 @@
   font-size: 12px;
   line-height: 16px;
   color: #EF4444;
+  margin-top: 10px;
 }
 
 /* .form-btn */
 .form-btn {
+  padding: 20px;
+  margin-top: 10px;
   font-size: 16px;
   line-height: 24px;
   border-radius: 0.5rem;
@@ -905,6 +912,7 @@
   height: 2.5rem;
   border-radius: 9999px;
   background-color: #E5E7EB;
+ 
 }
 @media (max-width: 1279px) {
   .footer_name {
@@ -934,6 +942,7 @@
   height: 2.5rem;
   border-radius: 9999px;
   background-color: #E5E7EB;
+  
 }
 
 /* .footer_email-mobile */
@@ -1052,4 +1061,16 @@
   .sidebar-label {
     display: none;
   }
+}
+
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
 }
